# vstt

./: .buildinfo  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  UpdatePrototype.bat  codecov.yml  environment.yml  genindex.html  index.html  objects.inv  paper.bib  paper.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  vstt-windows-installer.nsi
.github/workflows/: cd.yml  ci.yml  docs.yml  joss.yml  nsis.yml  pypi.yml  wheel.yml
_sources/: index.rst.txt
_sources/developer/: api.rst.txt  install.rst.txt
_sources/developer/_autosummary/: vstt.common.import_typed_dict.rst.txt  vstt.common.rst.txt  vstt.display.default_display_options.rst.txt  vstt.display.display_options_labels.rst.txt  vstt.display.import_display_options.rst.txt  vstt.display.rst.txt  vstt.experiment.Experiment.__init__.rst.txt  vstt.experiment.Experiment.clear_results.rst.txt  vstt.experiment.Experiment.create_trialhandler.rst.txt  vstt.experiment.Experiment.import_and_validate_dicts.rst.txt  vstt.experiment.Experiment.import_and_validate_trial_handler.rst.txt  vstt.experiment.Experiment.load_excel.rst.txt  vstt.experiment.Experiment.load_file.rst.txt  vstt.experiment.Experiment.load_json.rst.txt  vstt.experiment.Experiment.load_psydat.rst.txt  vstt.experiment.Experiment.rst.txt  vstt.experiment.Experiment.save_excel.rst.txt  vstt.experiment.Experiment.save_json.rst.txt  vstt.experiment.Experiment.save_psydat.rst.txt  vstt.experiment.rst.txt  vstt.geom.JoystickPointUpdater.__init__.rst.txt  vstt.geom.JoystickPointUpdater.rst.txt  vstt.geom.PointRotator.__init__.rst.txt  vstt.geom.PointRotator.rst.txt  vstt.geom.equidistant_angles.rst.txt  vstt.geom.points_on_circle.rst.txt  vstt.geom.rotate_point.rst.txt  vstt.geom.rst.txt  vstt.geom.to_target_dists.rst.txt  (+133 more)
_sources/quickstart/: display-results.rst.txt  install.rst.txt  share-experiment.rst.txt
benchmarks/: README.md  profile_task.prof  profile_task.py  profile_task.sh
developer/: api.html  install.html
developer/_autosummary/: vstt.common.html  vstt.common.import_typed_dict.html  vstt.display.default_display_options.html  vstt.display.display_options_labels.html  vstt.display.html  vstt.display.import_display_options.html  vstt.experiment.Experiment.__init__.html  vstt.experiment.Experiment.clear_results.html  vstt.experiment.Experiment.create_trialhandler.html  vstt.experiment.Experiment.html  vstt.experiment.Experiment.import_and_validate_dicts.html  vstt.experiment.Experiment.import_and_validate_trial_handler.html  vstt.experiment.Experiment.load_excel.html  vstt.experiment.Experiment.load_file.html  vstt.experiment.Experiment.load_json.html  vstt.experiment.Experiment.load_psydat.html  vstt.experiment.Experiment.save_excel.html  vstt.experiment.Experiment.save_json.html  vstt.experiment.Experiment.save_psydat.html  vstt.experiment.html  vstt.geom.JoystickPointUpdater.__init__.html  vstt.geom.JoystickPointUpdater.html  vstt.geom.PointRotator.__init__.html  vstt.geom.PointRotator.html  vstt.geom.equidistant_angles.html  vstt.geom.html  vstt.geom.points_on_circle.html  vstt.geom.rotate_point.html  vstt.geom.to_target_dists.html  vstt.meta.default_metadata.html  vstt.meta.html  vstt.meta.import_metadata.html  vstt.meta.metadata_labels.html  vstt.stat.append_stats_data_to_excel.html  vstt.stat.html  vstt.stat.list_dest_stat_label_units.html  vstt.stat.stats_dataframe.html  vstt.task.MotorTask.__init__.html  vstt.task.MotorTask.html  vstt.task.MotorTask.run.html  (+122 more)
docs/: Makefile  conf.py  index.rst
docs/developer/: api.rst  forwards-compatibility.rst  install.rst
docs/notebooks/: area_calculation.ipynb  example.ipynb  example.psydat  example_no_movement.psydat  example_not_closed_line.psydat  example_over_movement.psydat  example_select_back_to_center.psydat  example_target_not_reached.psydat  path_and_velocity.ipynb  path_and_velocity_copy.ipynb  raw_data.ipynb
docs/quickstart/: create-experiment.rst  display-results.rst  install.rst  run-experiment.rst  share-experiment.rst
docs/reference/: file-formats.rst  framerate.rst  statistics.rst  trial-conditions.rst
misc/: RunPrototype.bat  UpdatePrototype.bat  UpdateVSTT.bat  VSTT.bat  example-experiment.psydat
notebooks/: example.html  example.ipynb  raw_data.html  raw_data.ipynb
quickstart/: create-experiment.html  display-results.html  install.html  run-experiment.html  share-experiment.html
src/motor_task_prototype/: __init__.py  __main__.py  analysis.py  common.py  config.py  display.py  display_widget.py  experiment.py  geom.py  geometry.py  gui.py  joystick_wrapper.py  meta.py  meta_widget.py  results_widget.py  setup.py  stat.py  task.py  trial.py  trials_widget.py  types.py  vis.py
src/vstt/: __init__.py  __main__.py  common.py  display.py  display_widget.py  experiment.py  geom.py  gui.py  joystick_wrapper.py  meta.py  meta_widget.py  results_widget.py  stat.py  stats.py  task.py  trial.py  trials_widget.py  types.py  update.py  vis.py  vtypes.py
tests/: conftest.py  test_analysis.py  test_common.py  test_display.py  test_display_widget.py  test_experiment.py  test_geom.py  test_geometry.py  test_gui.py  test_joystick_wrapper.py  test_meta.py  test_meta_widget.py  test_motor_task_prototype.py  test_psychopy.py  test_results_widget.py  test_stat.py  test_stats.py  test_task.py  test_trial.py  test_trials_widget.py  test_update.py  test_vis.py  test_vstt.py
tests/helpers/: gui_test_utils.py  qt_test_utils.py
